welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:4: error: not found: value poseBrosse
		poseBrosse();
                ^MethodsPicture:24: error: not found: value color
		setCouleurBrosse(color.Yellow);
                                 ^